--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "jsdevenvironmenttemplate",
+  "name": "shape-tracker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode development",
-    "start": "npm run build && webpack-dev-server --open --mode development",
+    "build": "webpack --mode=development",
+    "start": "npm run build; webpack-dev-server --open --mode development",
     "lint": "eslint src/*.js",
-    "test": "jest --coverage",
-    "deploy": "npm run build && gh-pages -d dist"
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -29,11 +28,11 @@
     "style-loader": "^1.0.0",
     "webpack": "4.39.3",
     "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "3.8.0"
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "jquery": "^3.6.0",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
 }
